# rust

./: .appveyor.yml  .atom-build.yml  .cirrus.yml  .clang-format  .cursorignore  .ecformat_ignore  .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .ignore  .mailmap  .remarkrc  .remarkrc.json  .rustfmt.toml  .swo  .travis.yml  .travis_rust.yml  .typos.toml  0000-allow-overlapping-impls-on-marker-traits.md  0000-bury-description.md  0000-clamp.md  0000-coercions.md  0000-from-slice-to-rc-slice.md  0000-keywords.md  0000-mod.md  0000-objects.md  0000-open-options.md  0000-pattern-guards-with-bind-by-move.md  0000-remove-static-assert.md  0000-self-impl.md  0000-stdout-existential-crisis.md  0000-struct-grammar.md  0000-template.md  0000-tuple-struct-self-ctor.md  0000-variants-namespace.md  (+255 more)
abi/: Cargo.toml
abi/src/: auxv.rs  block_device_protocol.rs  debug.rs  device.rs  display_driver_protocol.rs  display_driver_protocol_tests.rs  display_protocol.rs  drawlist.rs  driver_ctx.rs  driver_frame.rs  errors.rs  font.rs  font_protocol.rs  fs.rs  geometry.rs  ids.rs  lib.rs  logging.rs  macros.rs  memfd.rs  module.rs  module_manifest.rs  numbers.rs  packed.rs  pixel.rs  rpc.rs  schema.rs  service_contract.rs  signal.rs  sound.rs  supervisor_protocol.rs  svg_protocol.rs  symbols.rs  syscall.rs  termios.rs  thing.rs  time.rs  trace.rs  tree_provider.rs  ui_event.rs  (+7 more)
abi/tests/: content_provider_schema.rs  font_schema.rs  thing_id_uniqueness.rs  ui_boundary_enforcement.rs
bci-integration/signal-processor/: pyproject.toml
bran/: Cargo.toml  README.md  build.rs  linker-aarch64.ld  linker-loongarch64.ld  linker-riscv64.ld  linker-x86_64.ld  rust-toolchain.toml
bran/src/: console.rs  framebuffer.rs  main.rs  mem.rs  requests.rs  runtime.rs  theme.rs
build_sysroot/: Cargo.toml  build_sysroot.sh  prepare_sysroot_src.sh
build_sysroot/alloc_system/: Cargo.toml  lib.rs
build_sysroot/compiler_builtins/: Cargo.toml  lib.rs
build_sysroot/rustc-std-workspace-alloc/: Cargo.toml  lib.rs
cargo-fmt/: Cargo.toml  main.rs
cargo-fmt/src/: main.rs
clippy_dev/: Cargo.toml  README.md  crater_crates.toml  lintcheck_crates.toml
clippy_dev/src/: bless.rs  crater.rs  deprecate_lint.rs  dogfood.rs  edit_lints.rs  fmt.rs  generate.rs  ide_setup.rs  lib.rs  lint.rs  lintcheck.rs  main.rs  new_lint.rs  parse.rs  ra_setup.rs  release.rs  rename_lint.rs  serve.rs  stderr_length_check.rs  sync.rs  update_lints.rs  utils.rs
clippy_dummy/: Cargo.toml  PUBLISH.md  build.rs  crates-readme.md
clippy_dummy/src/: main.rs
clippy_lints/: Cargo.toml  README.md
clippy_lints/src/: absolute_paths.rs  absurd_extreme_comparisons.rs  allow_attribute.rs  allow_attributes.rs  almost_complete_letter_range.rs  almost_complete_range.rs  approx_const.rs  arbitrary_source_item_ordering.rs  arc_with_non_send_sync.rs  arithmetic.rs  array_indexing.rs  as_conversions.rs  as_underscore.rs  asm_syntax.rs  assert_checks.rs  assertions_on_constants.rs  assertions_on_result_states.rs  assign_ops.rs  assigning_clones.rs  async_yields_async.rs  atomic_ordering.rs  attrs.rs  await_holding_invalid.rs  await_holding_lock.rs  await_holding_refcell_ref.rs  bit_mask.rs  blacklisted_name.rs  block_in_if_condition.rs  block_scrutinee.rs  blocks_in_conditions.rs  blocks_in_if_conditions.rs  bool_assert_comparison.rs  bool_to_int_with_if.rs  booleans.rs  borrow_as_ptr.rs  borrow_deref_ref.rs  box_default.rs  byte_char_slices.rs  bytecount.rs  bytes_count_to_len.rs  (+493 more)
clippy_test_deps/: Cargo.toml
clippy_utils/: Cargo.toml  README.md
clippy_utils/src/: ast_utils.rs  attrs.rs  author.rs  camel_case.rs  check_proc_macro.rs  conf.rs  consts.rs  diagnostics.rs  disallowed_profiles.rs  eager_or_lazy.rs  higher.rs  hir_utils.rs  inspector.rs  internal_lints.rs  lib.rs  macros.rs  msrvs.rs  numeric_literal.rs  paths.rs  ptr.rs  qualify_min_const_fn.rs  res.rs  source.rs  str_utils.rs  sugg.rs  sym.rs  ty.rs  usage.rs  visitors.rs
config_proc_macro/: Cargo.toml
config_proc_macro/src/: attrs.rs  config_type.rs  item_enum.rs  lib.rs  utils.rs
config_proc_macro/tests/: smoke.rs
enzyme/: CMakeLists.txt  doxygen.cfg
enzyme/BCLoad/: BCLoader.cpp  CMakeLists.txt  ClangBCLoader.cpp  fixopenblas.sh  fixwrapblas.sh  makeblas.cmake
enzyme/Enzyme/: ActiveVariable.cpp  ActiveVariable.h  ActivityAnalysis.cpp  ActivityAnalysis.h  ActivityAnalysisPrinter.cpp  AdjointGenerator.h  CApi.cpp  CApi.h  CMakeLists.txt  CacheUtility.cpp  CacheUtility.h  DifferentialUseAnalysis.h  Enzyme.cpp  Enzyme.h  EnzymeLogic.cpp  EnzymeLogic.h  (+21 more)
gcc-test-backend/: Cargo.toml
git-rustfmt/: Cargo.toml  main.rs
lintcheck/: Cargo.toml  README.md  ci_crates.toml  lintcheck_crates.toml
mini-macro/: Cargo.toml
rustc-hash/: .gitignore  Cargo.toml  README.md
rustfmt-bin/: Cargo.toml  build.rs
rustfmt-config/: Cargo.toml  README.md
rustfmt-core/: Cargo.toml  README.md
rustfmt-format-diff/: Cargo.toml
src/: .gitignore  Cargo.toml  Makefile  Makefile.in  README  README.md  README.txt  abi.rs  allocator.rs  analyze.rs  approx_const.rs  archive.rs  arithmetic.rs  array_indexing.rs  asm.rs  assign_ops.rs  ast.rs  atomic_shim.rs  attr.rs  attributes.rs  attrs.rs  backend.rs  base.rs  base64.rs  bit_mask.rs  blacklisted_name.rs  block_in_if_condition.rs  booleans.rs  builder.rs  callee.rs  cargo  cargo.rs  cast.rs  chains.rs  changes.rs  checkstyle.rs  clock.rs  closures.rs  codegen_f16_f128.rs  codegen_i128.rs  (+199 more)
stem/: Cargo.toml  build.rs
test-cargo-miri/: Cargo.toml  build.rs  run-test.py  run.args.stderr.ref  run.args.stdout.ref  stderr.ref  stderr.ref2  test.bin-target.stdout.ref  test.cross-target.stdout.ref  test.default.stdout.ref  test.filter.cross-target.stdout.ref  test.filter.stdout.ref  test.raw-ptr-track.stdout.ref  test.stderr-proc-macro-doctest.ref  test.stderr.ref1  test.stdout.ref  test.stdout.ref1  test.stdout.ref2  test.stdout.ref3  test.stdout.ref4  test.test-target.stdout.ref
test_dependencies/: Cargo.toml
ui_test/: .gitignore  Cargo.toml  README.md
xtask/: Cargo.toml
(+158932 files in other folders)
