[package]
name = "clippy_dev"
version = "0.0.1"
edition = "2021"

[dependencies]
aho-corasick = "0.7"
clap = "3.2"
indoc = "1.0"
itertools = "0.10.1"
opener = "0.5"
shell-escape = "0.1"
walkdir = "2.3"

[features]
deny-warnings = []

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
