[package]
name = "clippy_utils"
version = "0.1.54"
authors = ["The Rust Clippy Developers"]
edition = "2018"
publish = false

[dependencies]
if_chain = "1.0.0"
itertools = "0.9"
regex-syntax = "0.6"
serde = { version = "1.0", features = ["derive"] }
unicode-normalization = "0.1"
rustc-semver="1.1.0"

[features]
internal-lints = []
metadata-collector-lint = []

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
