[package]
name = "rustfmt-config_proc_macro"
version = "0.1.2"
authors = ["topecongiro <seuchida@gmail.com>"]
edition = "2018"
description = "A collection of procedural macros for rustfmt"
license = "Apache-2.0/MIT"
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/rust-lang/rustfmt"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full", "visit"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
debug-with-rustfmt = []
