[package]
name = "rustfmt-config_proc_macro"
version = "0.3.0"
edition = "2018"
description = "A collection of procedural macros for rustfmt"
license = "Apache-2.0/MIT"
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/rust-lang/rustfmt"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }

[dev-dependencies]
serde = { version = "1.0.160", features = ["derive"] }

[features]
default = []
debug-with-rustfmt = []
